This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 2.1

- Added support for TLS anonymous authentication.

- Fixed sendmail wrapper handling of empty sender on command line.

- Fixed nullmailer-inject handling of leading "From " lines.

- Some build fixes.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 2.0

- Added support to nullmailer-send to move permanently failing messages
  out of the queue, and to generate bounce messages.

- Added support for IPv6.

- Added program to generate bounce/delay messages.

- Added an "allmailfrom" control file to nullmailer-queue, causing all
  messages to share a hard-coded envelope sender.

- Added logging the message sender/recipient in nullmailer-send.

- Improved handling of system errors when reading config files.

- Secured handling of password options for protocol modules.

- Support standard shell quoting for options in the "remotes" file.

- Added protocol option to set a separate TLS client private key file.

- Added protocol option to bind the source address on connections.

- Fixed nullmailer-inject to report errors to stderr.

- Fixed gnutls cast to pointer from integer of different size warning.

- Fixed nullmailer-inject and -queue to handle the null (empty) sender
  address. Needed for RFC 3798 (Message Disposition Notification).

- Moved spool directory to /var/spool/nullmailer like other MTAs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.13

- Fixed growing recipient list when using sendmail -bs to send multiple
  messages.
