@@ -32,10 +32,10 @@ do
 	protocol $p -- host=::1 port=$port source=::1 3<testmail
 
 	echo "Testing protocol failure with $p (bad source addr 1)"
-	error 10 protocol $p -- host=::1 port=$port source=127.0.0.1 3<testmail
+	error 19 protocol $p -- host=::1 port=$port source=127.0.0.1 3<testmail
 
 	echo "Testing protocol failure with $p (bad source addr 2)"
-	error 10 protocol $p -- host=127.0.0.1 port=$port source=::1 3<testmail
+	error 19 protocol $p -- host=127.0.0.1 port=$port source=::1 3<testmail
 
 	stop server
 
